tests/golden/type_errors/lambda_variable_wrong_arity.cd
let f = fun (x) {
  return x;
};
print f();
